# celery-batches

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  LICENSE  README.rst  RELEASING.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
celery_batches/: __init__.py  trace.py
docs/: Makefile  api.rst  conf.py  examples.rst  history.rst  how_it_works.rst  index.rst  make.bat
docs/_ext/: celerydocs.py
docs/examples/: bulk_insert.py  counter.py  github_api.py  last_seen.py
requirements/: default.txt  docs.txt  pkgutils.txt  test.txt
t/integration/: conftest.py  tasks.py  test_batches.py  test_events.py
t/unit/: test_signals.py
