[metadata]
name = celery-batches
version = 0.6dev
description = Experimental task class that buffers messages and processes them as a list.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Patrick Cloke
author_email = clokep@patrick.cloke.us
url = https://github.com/clokep/celery-batches
download_url = https://github.com/clokep/celery-batches
keywords = task, job, queue, distributed, messaging, actor
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Topic :: System :: Distributed Computing
    Topic :: Software Development :: Object Brokering
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent

[options]
packages =
    celery_batches
install_requires = celery>=4.4,<5.3
python_requires = >=3.6

[flake8]
# Don't use a strict line limit if it makes the code more readable.
ignore = E501
