[metadata]
name = celery-batches
version = 0.9
description = Experimental task class that buffers messages and processes them as a list.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Patrick Cloke
author_email = clokep@patrick.cloke.us
url = https://github.com/clokep/celery-batches
keywords = task, job, queue, distributed, messaging, actor
license = BSD
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Topic :: System :: Distributed Computing
    Topic :: Software Development :: Object Brokering
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
project_urls =
    Documentation = https://celery-batches.readthedocs.io
    Release notes = https://github.com/clokep/celery-batches/blob/main/CHANGELOG.rst
    Source = https://github.com/clokep/celery-batches
    Funding = https://github.com/sponsors/clokep
    Tracker = https://github.com/clokep/celery-batches/issues

[options]
packages =
    celery_batches
install_requires = celery>=5.0,<5.5
python_requires = >=3.8

[options.extras_require]
test =
    pytest
    pytest-asyncio

[flake8]
extend-ignore = E203
max-line-length = 88

[isort]
profile = black
default_section = THIRDPARTY
sections=FUTURE,STDLIB,FIRSTPARTY,CELERY,THIRDPARTY,LOCALFOLDER
known_celery=billiard,celery,kombu,vine
